Fix parsing of 'cursor' property and ignoring of uri() values, which we don't support.  b=77974  r+sr=bzbarsky